// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-create-app - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Create Azure-ready application configurations using Azure Developer CLI (azd). USE THIS SKILL when users want to prepare their application for Azure deployment, create azure.yaml, generate infrastructure files, or set up azd projects. Trigger phrases include "prepare for Azure", "create azure.yaml", "set up azd", "generate infrastructure", "configure for Azure", "make this Azure-ready", "deploy to Azure", "azd init", etc.",
  "extractedKeywords": [
    "aks",
    "app",
    "app service",
    "application",
    "azure",
    "azure-ready",
    "bicep",
    "cli",
    "configurations",
    "configure",
    "container",
    "create",
    "deploy",
    "deployment",
    "developer",
    "files",
    "function",
    "generate",
    "include",
    "infrastructure",
    "init",
    "make",
    "mcp",
    "phrases",
    "prepare",
    "projects",
    "skill",
    "their",
    "this",
    "trigger",
    "users",
    "using",
    "validation",
    "want",
    "when",
    "yaml",
  ],
  "name": "azure-create-app",
}
`;

exports[`azure-create-app - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "app",
  "app service",
  "application",
  "azure",
  "azure-ready",
  "bicep",
  "cli",
  "configurations",
  "configure",
  "container",
  "create",
  "deploy",
  "deployment",
  "developer",
  "files",
  "function",
  "generate",
  "include",
  "infrastructure",
  "init",
  "make",
  "mcp",
  "phrases",
  "prepare",
  "projects",
  "skill",
  "their",
  "this",
  "trigger",
  "users",
  "using",
  "validation",
  "want",
  "when",
  "yaml",
]
`;
